--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.2",
     "buffer": "^6.0.3",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.446.0",
     "node-rsa": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
